@@ -3,6 +3,8 @@ ChangeLog for pommed
 
 version 1.27:
 	- pommed: added support for the MacBook5,2 (white MacBook).
+	- pommed: added support for the MacBookPro5,5 (13" MacBookPro June
+	2009).
 
 version 1.26:
 	- pommed: only keystrokes on the built-in keyboard should reset
